--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
+pbkdf2 = "0.12"
+subtle = "2.5"
 tokio = { version = "1", features = ["full"] }
 bytes = "1"
 md-5 = "0.10"
